# Proof_of_process

./: .gitignore  README.md  pyproject.toml  requirements.txt
proof_of_process/: config.py
proof_of_process/analysis/: burndown.py  cfd.py  robust_stats.py
proof_of_process/anomaly/: control_charts.py
proof_of_process/cli/: ingest_then_run.py  run_pipeline.py
proof_of_process/connectors/: google_sheets_connector.py  trello_connector.py
proof_of_process/data/: synthetic_data_factory.py
proof_of_process/entity/: member_canonicalizer.py
proof_of_process/evm/: earned_schedule.py
proof_of_process/forecast/: forecast_state_space.py
proof_of_process/graph/: team_task.py
proof_of_process/ingest/: ai_xlsx_ingestor.py  entity_linker.py  member_dedupe.py  schema_autodetect.py  schema_mapper.py  status_normalizer.py
proof_of_process/metrics/: inequality.py  kpi.py
proof_of_process/ml/: anomaly.py  effort_estimator.py  evm.py  forecasting.py  risk_predictor.py  shapley_contrib.py
proof_of_process/nlp/: skill_extractor.py
proof_of_process/pipeline/: orchestrator.py
proof_of_process/planning/: assignment.py
proof_of_process/prioritization/: scoring.py
proof_of_process/scheduling/: cpm_pert.py
proof_of_process/sim/: what_if.py
proof_of_process/utils/: logging_utils.py
proof_of_process/viz/: charts_enterprise.py  pdf_report_enterprise.py
